/**
\page changelog Changelog

\section c019 version 0.18 -> 0.18+

 - Added memory map dumping and memory range checking. (29-apr-2008, Brian Wheeler)
 - Rewrote DMA code to make it ready for floppy support. (18-apr-2008, Brian Wheeler)
 - More questions in debug confuration script. (03-apr-2008, Camiel Vanderhoeven)
 - Compile on OpenVMS; new OpenVMS build scripts generated from the UNIX build scripts; Include
   selected parts of Poco (Poco has dropped support for OpenVMS). (02-apr-2008, Camiel
   Vanderhoeven)
 - Created configuration file utility. (28-mar-2008, Camiel Vanderhoeven)
 - Support OpenVMS file paths. (26-mar-2008, Camiel Vanderhoeven)
 - Use the config.h data created by the configure script. (26-mar-2008, Camiel Vanderhoeven)
 - Improved IDE locking by a) Removing all of the general register locking; b) Busmaster locking
   is still in place, but it might not be needed, this locking is pretty fine grained so nothing
   should time out waiting for it; c) Creating an alt_status variable which gets updated when the
   real status becomes stable (i.e. at the end of the execute() run, after the drq status is
   changed, etc), access to this variable is locked; d) Everything else is a free for all.
   (20-mar-2008, Brian Wheeler)
 - Implement an optional delayed IDE interrupt. The OSes still lose interrupts sometimes. 
   (20-mar-2008, Brian Wheeler)
 - Create configuration files to use GNU's Autotools. (20-mar-2008, Camiel Vanderhoeven)
 - Support disk image files >2GB on linux. (19-mar-2008, Camiel Vanderhoeven)
 - Fixed some IDE CD-ROM issues that were introduced with the multi-threading patch. (17-mar-2008,
   Brian Wheeler)
 - Restored SDL functionality. (16-mar-2008, Camiel Vanderhoeven)
 - Better exception handling, restored Serial port menu functionality (14-mar-2008, Camiel
   Vanderhoeven)
 - Ability to stop and restart threads, restored save/restore state functionality. (13-mar-2008, 
   Camiel Vanderhoeven)